myqtt: * [fix] Several updates in the library infrastructure. Added initial   working code for CONNECT packet.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+* Limit utf-8 strings to avoid memory consumption. It makes no sense
+  to have a username or password with 64K long (or the client
+  identifier).
+
 * Check references to VortexFrame and frame_received handlers to
   change them to MyQttMsg and msg_received
 
