--- a/TODO
+++ b/TODO
@@ -14,6 +14,8 @@
 
 --== things that should be reviewed ==--
 
+* Limit subscription side some how. It could be a memory problem.
+
 * Make client library to try to connect with 3.1.1 and if it fails, with 
   3.1.
 
