myqtt: * [fix] Fixed regression test (test_11) to check support for session recovery   (ensuring subscriptions are all recovered).

--- a/TODO
+++ b/TODO
@@ -12,6 +12,10 @@
 
 * Add wildcard support
 
+* Big message support 
+
+* High load support 
+
 --== things that should be reviewed ==--
 
 * Limit subscription side some how. It could be a memory problem.
