--- a/TODO
+++ b/TODO
@@ -2,8 +2,6 @@
 
 * Add retain flag support
 
-* Add QoS 2 operational support
-
 * Add support to tls
 
 * Add support to websocket
@@ -20,6 +18,8 @@
 
 * Make client library to try to connect with 3.1.1 and if it fails, with 
   3.1.
+
+* Disable wildcard subscription for certain users.
 
 * After publishing first or second release, make the way to have myqtt
   listed under: http://mqtt.org/wiki/doku.php/server_support
