myqtt: * [fix] More content to be supported.

--- a/TODO
+++ b/TODO
@@ -29,5 +29,10 @@
 * Ensure support for:
   http://jpmens.net/2013/02/25/lots-of-messages-mqtt-pub-sub-and-the-mosquitto-broker/
 
+* Ensure support for:
+  http://www.hardill.me.uk/wordpress/2013/03/24/d3-mqtt-tree-visualiser-updated/
+  http://test.mosquitto.org/sys/
+
+
 
 
