myqtt: * [fix] More TODO updates..

--- a/TODO
+++ b/TODO
@@ -64,5 +64,7 @@
 * MONITORING options - keeping an eye on load and troughput for tests and
   support.
 
+* Review http://www.aspl.es/docs/SIOTPostProceedings.pdf
+
 
 
