--- a/TODO
+++ b/TODO
@@ -10,13 +10,15 @@
 
 * Add wildcard support (for message retention too).
 
-* Big message support 
+* Big message support (review and strenghten current limits).
 
-* High load support 
+* High load support (review and strenghten current limits).
 
-* Remove references to ppath concept inside myqttd
+* Add support for cluster support
 
 --== things that should be reviewed ==--
+
+* Remove references to ppath concept inside myqttd
 
 * Limit subscription size somehow. It could be a memory problem.
 
