myqtt: * [fix] Updated TODO to include more references to support.

--- a/TODO
+++ b/TODO
@@ -43,6 +43,10 @@
   http://www.hardill.me.uk/wordpress/2013/03/24/d3-mqtt-tree-visualiser-updated/
   http://test.mosquitto.org/sys/
 
+* Ensure support to limit persistent messages duration for persistent
+  clients:
+  https://groups.google.com/d/msg/mqtt/fjVNfZJ46dI/p_F7DG5SBsIJ
+
 * Review and provide support for message ordering differences:
   https://groups.google.com/forum/#!msg/mqtt/UfcO0HtLq9s/cjboTzdoR64J
 
