myqtt: * [fix] Added support to allow dropping a connection when a new connection   is received announcing same client identifier as requested by standard   (MQTT-3.1.4-2). Now myqttd support both behaviours (rejecting new connection   or dropping previous one). Added myqttd server configuration option:
  - <drop-conn-same-client-id value="no" />

  Added regression test_10 to check feature introduced.

--- a/TODO
+++ b/TODO
@@ -18,6 +18,10 @@
 
 --== things that should be reviewed ==--
 
+* Post a reference as a comment on the following page about 
+  <drop-conn-same-client-id value="yes" /> to implement the standard
+  (even though it makes no sense):  http://2lemetry.com/2014/10/24/avoiding-mqtt-pitfalls/
+
 * Remove references to ppath concept inside myqttd
 
 * Limit subscription size somehow. It could be a memory problem.
