myqtt: * [fix] Added initial support for SNI TLS indication so the library can   handle this indication and select the right certificate to work with.   Added initial code for test_19a and test_11 (libmyqtt and myqttd).   Still more work is required.

--- a/TODO
+++ b/TODO
@@ -8,6 +8,9 @@
 
 --== roadmap ==--
 
+* Add support for SNI (continue with test_19a). Then continue with
+  integration at test_11 (myqttd).
+
 * Add wildcard support (for message retention too).
 
 * Big message support (review and strenghten current limits).
