--- a/TODO
+++ b/TODO
@@ -34,6 +34,9 @@
 
 --== things that should be reviewed ==--
 
+* Add support to get a list of active topics: 
+  https://groups.google.com/d/msg/mqtt/03QiWpz4kHY/1g52eTb9ou4J
+
 * Add support for certificate revocation list and to reload it on real
   time if it is updated.
 
