--- a/TODO
+++ b/TODO
@@ -43,6 +43,9 @@
 * Review:
   http://www.hivemq.com/mqtt-security-fundamentals-authorization/
 
+* Review fuzzing tool and use to check myqtt stack:
+  https://groups.google.com/d/msg/mqtt/XoHva7vPsDM/UJhytUsmBLcJ
+
 * Add support to get a list of active topics: 
   https://groups.google.com/d/msg/mqtt/03QiWpz4kHY/1g52eTb9ou4J
   https://groups.google.com/d/msg/mqtt/03QiWpz4kHY/RygE9M0rFAcJ
