myqtt: * [fix] Adding more documentation about myqtt-client and how to use topic-match   function to test topic filters without creating a MQTT connection.
* [fix] Updated myqtt-reader API to provide two internal functions that allows
  doing filter matching and filter correction check:

  - myqtt_reader_topic_filter_match
  - myqtt_reader_is_wrong_topic

  Added regression test (test_00_d) to check all matches found in documentation.

--- a/TODO
+++ b/TODO
@@ -10,6 +10,9 @@
 
 --== things that should be reviewed ==--
 
+* Publish small note about how to check if a topic filter matches from
+  the command line: myqtt-client -c '+/accounts' 'balance/accounts'
+
 * Check tests from:
   https://eclipse.org/paho/clients/testing/
 
@@ -95,6 +98,11 @@
 
 --== release names ==--
 
+Enter the ninja
+Thriller
+Seven Nation Army
+Evil Boy
+Be like a squirrel
 Disculpad mi osadia
 I against I 
 Todos duermen ya
