myqtt: * [fix] Finished complete and tested support for message retention when   subscribing with a filter including wildcards. Updated regression test   to add to new tests: test_17a and test_17b to check wildcards + and #

--- a/TODO
+++ b/TODO
@@ -1,12 +1,10 @@
 --== roadmap ==--
 
-* Add wildcard support (for message retention too).
-
 * Big message support (review and strenghten current limits).
 
 * High load support (review and strenghten current limits).
 
-* Add support for cluster support
+* Add support for clustering for epic configurations
 
 --== things that should be reviewed ==--
 
