--- a/debian-files/lenny/changelog
+++ b/debian-files/lenny/changelog
@@ -1,3 +1,9 @@
+myqtt (0.6.3-238) stable; urgency=low
+
+  * New upstream release
+
+ -- Advanced Software Production Line, S.L. <info@aspl.es>  Sun, 23 Aug 2015 13:48:00 +0200
+
 myqtt (0.6.3-229) stable; urgency=low
 
   * First public release
