myqtt: * [fix] Updating TODO file..

--- a/TODO
+++ b/TODO
@@ -27,6 +27,9 @@
   https://groups.google.com/d/msg/mqtt/XoHva7vPsDM/UJhytUsmBLcJ
   https://github.com/F-Secure/mqtt_fuzz
 
+* Review checking tools like mqtt-malaria and Jmeter
+  
+
 * Add support to get a list of active topics: 
   https://groups.google.com/d/msg/mqtt/03QiWpz4kHY/1g52eTb9ou4J
   https://groups.google.com/d/msg/mqtt/03QiWpz4kHY/RygE9M0rFAcJ
